# ref-split

./: Cargo.toml
ref-destruct-def/: Cargo.toml
ref-destruct-def/src/: lib.rs
ref-destruct-macro/: Cargo.toml
ref-destruct-macro/src/: attribute.rs  lib.rs
ref-split-def/: Cargo.toml
ref-split-def/src/: lib.rs
ref-split-macro/: Cargo.toml
ref-split-macro/src/: attribute.rs  lib.rs
src/: lib.rs
tests/: build.rs  named-generics.rs  named.rs  unnamed-generics.rs  unnamed.rs
