[package]
name = "ref-destruct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ref-destruct-macro",
    "ref-destruct-def",
]

[dependencies]
ref-destruct-macro = { path = "ref-destruct-macro" }
ref-destruct-def = { path = "ref-destruct-def" }

[dev-dependencies]
trybuild = "1.0"
