[package]
name = "ref-split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ref-split-macro",
    "ref-split-def",
]

[dependencies]
ref-split-macro = { path = "ref-split-macro" }
ref-split-def = { path = "ref-split-def" }

[dev-dependencies]
trybuild = "1.0"
